--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,9 +1,6 @@
 set(TEST_NAME ${PROJECT_NAME}_test)
 
-find_package (GTest REQUIRED)
 include_directories (${GTEST_INCLUDE_DIRS})
-
-# enable_testing ()
 
 # test source files
 set (TEST_SOURCES
@@ -12,7 +9,12 @@ set (TEST_SOURCES
 
 
 # Build the test executable.
-add_executable(${TEST_NAME} ${TEST_SOURCES})
+add_executable (${TEST_NAME} ${TEST_SOURCES})
+add_dependencies (${TEST_NAME} googletest)
 
-target_link_libraries (${TEST_NAME} ${GTEST_LIBRARIES} ${GTEST_MAIN_LIBRARIES})
+target_link_libraries (${TEST_NAME} pthread)
+target_link_libraries (${TEST_NAME}
+    ${GTEST_LIBS_DIR}/libgtest.a
+    ${GTEST_LIBS_DIR}/libgtest_main.a
+)
 target_link_libraries (${TEST_NAME} ${PROJECT_NAME}_lib)
